00: reconcile test config and reduce spotbugs noise